--- a/.gitignore
+++ b/.gitignore
@@ -10,10 +10,15 @@ RUNNING_PID
 .ensime_cache
 .sbtserver
 project/project
+project/.sbtserver.lock
+project/play-fork-run.sbt
+project/sbt-ui.sbt
 project/target
 *.iml
 *.eml
 .cache
+activator
+activator-launch-1.3.5.jar
 
 # Mac
 .DS_Store
