Switch DB from h2 to postgresql
データベースをh2からpostgresqlに変更した
postgresqlではuserが予約語になっていたため、taskテーブルのuser属性を
user_idに変更した

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,12 +30,16 @@ play.i18n.langs = [ "ja" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-db.default.driver=org.h2.Driver
+#db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
 # db.default.url="jdbc:h2:/path/to/db-file"
-db.default.url="jdbc:h2:~/Desktop/data/todolist/play.h2.db"
-db.default.username=sa
-# db.default.password=""
+#db.default.url="jdbc:h2:~/Desktop/data/todolist/play.h2.db"
+#db.default.username=sa
+
+# Default database configuration using PostgreSQL database engine
+db.default.driver="org.postgresql.Driver"
+db.default.url="postgres://postgres:password@localhost:5432/todolist"
+
 
 # Evolutions
 # ~~~~~
