--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,8 @@ machine:
 
   environment:
     CIRCLE_ENV: test
-    DATABASE_URL: postgres://127.0.0.1:5432/circle_test
-
+    DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
+    
 # Collect build artifacts
 general:
   artifacts:
