modify circle-ci config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -39,7 +39,7 @@ play.i18n.langs = [ "ja" ]
 # Default database configuration using PostgreSQL database engine
 db.default.driver="org.postgresql.Driver"
 db.default.url="postgres://postgres:password@localhost:5432/todolist"
-db.default.url=${?DATABASE_URL}
+db.default.url="${?DATABASE_URL}"
 
 # Evolutions
 # ~~~~~
