add deployment settings to circle.yml

--- a/circle.yml
+++ b/circle.yml
@@ -33,3 +33,9 @@ test:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
     - find . -type f -regex ".*/target/test-reports/.*xml" -exec cp {} $CIRCLE_TEST_REPORTS/junit/ \;
     - sbt dist
+
+deployment:
+  staging:
+    branch: master
+    heroku:
+      appname: foo-bar-123
