switch DB from postgresql to mysql
PostgreSQLの場合、CircleCIでテストを実行するとDB connection errorで失敗
する
解決方法がわからなかったのでDBの方をMySQLに変更した

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -30,16 +30,28 @@ play.i18n.langs = [ "ja" ]
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
-#db.default.driver=org.h2.Driver
+# H2
+# ---
+# db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
 # db.default.url="jdbc:h2:/path/to/db-file"
-#db.default.url="jdbc:h2:~/Desktop/data/todolist/play.h2.db"
-#db.default.username=sa
+# db.default.url="jdbc:h2:~/Desktop/data/todolist/play.h2.db"
+# db.default.username=sa
 
+# PostgreSQL
+# ---
 # Default database configuration using PostgreSQL database engine
-db.default.driver="org.postgresql.Driver"
-db.default.url="postgres://postgres:password@localhost:5432/todolist"
-db.default.url=${?DATABASE_URL} 
+# db.default.driver="org.postgresql.Driver"
+# db.default.url="postgres://postgres:password@localhost:5432/todolist"
+# db.default.url=${?DATABASE_URL}
+
+# MySQL
+# ---
+# Default database configuration using MySQL database engine
+# Connect to playdb as playdbuser
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="jdbc:mysql://localhost/todolist"
+db.default.username=root
 
 # Evolutions
 # ~~~~~
@@ -49,11 +61,11 @@ db.default.url=${?DATABASE_URL}
 # You can disable evolutions for a specific datasource if necessary
 # play.evolutions.db.default.enabled=false
 
-
-# env vars for github auth
+# Github Auth
+# ~~~~~
+# Env vars for github auth
 # github.client.id=${GITHUB_AUTH_ID}
 # github.client.secret=${GITHUB_AUTH_SECRET}
 github.client.id="3b10f0e332186527dae6"
 github.client.secret="5afe5914c497bcd666553b46de06a4cfaf552f75"
-
 github.redirect.url="https://github.com/login/oauth/authorize?client_id=%s&redirect_uri=%s&scope=%s&state=%s"
