modify CircleCI config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -51,7 +51,9 @@ play.i18n.langs = [ "ja" ]
 # Connect to playdb as playdbuser
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/todolist"
+db.default.url=${?DATABASE_URL}
 db.default.username=root
+db.default.url=${?DATABASE_USER}
 
 # Evolutions
 # ~~~~~
