--- a/circle.yml
+++ b/circle.yml
@@ -6,7 +6,8 @@ machine:
 
   environment:
     CIRCLE_ENV: test
-    DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
+    DATABASE_URL: "jdbc:mysql://127.0.0.1/circle_test"
+    DATABASE_USER: ubuntu
     
 # Collect build artifacts
 general:
