Fix a mistake in application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -53,7 +53,7 @@ db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/todolist"
 db.default.url=${?DATABASE_URL}
 db.default.username=root
-db.default.url=${?DATABASE_USER}
+db.default.username=${?DATABASE_USER}
 
 # Evolutions
 # ~~~~~
