modify database environment variables
herokuで使われていない環境変数名に変更

--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,8 @@ machine:
 
   environment:
     CIRCLE_ENV: test
-    DATABASE_URL: "jdbc:mysql://127.0.0.1/circle_test"
-    DATABASE_USER: ubuntu
+    JDBC_DATABASE_URL: "jdbc:mysql://127.0.0.1/circle_test"
+    JDBC_DATABASE_USER: ubuntu
     
 # Collect build artifacts
 general:
