add mysql password config for cleardb(heroku addon)

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -54,6 +54,7 @@ db.default.url="jdbc:mysql://localhost/todolist"
 db.default.url=${?JDBC_DATABASE_URL}
 db.default.username=root
 db.default.username=${?JDBC_DATABASE_USER}
+db.default.password=${?JDBC_DATABASE_PASSWORD}
 
 # Evolutions
 # ~~~~~
