--- a/conf/application.conf
+++ b/conf/application.conf
@@ -69,7 +69,7 @@ db.default.password=${?JDBC_DATABASE_PASSWORD}
 # ~~~~~
 # Env vars for github auth
 github.client.id="3b10f0e332186527dae6"
-github.client.id=${GITHUB_AUTH_ID}
+github.client.id=${?GITHUB_AUTH_ID}
 github.client.secret="5afe5914c497bcd666553b46de06a4cfaf552f75"
-github.client.secret=${GITHUB_AUTH_SECRET}
+github.client.secret=${?GITHUB_AUTH_SECRET}
 github.redirect.url="https://github.com/login/oauth/authorize?client_id=%s&redirect_uri=%s&scope=%s&state=%s"
